Add JWT validate token
